--- a/bet/pom.xml
+++ b/bet/pom.xml
@@ -62,6 +62,10 @@
     		<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+        	<groupId>org.springframework.data</groupId>
+        	<artifactId>spring-data-rest-webmvc</artifactId>
+        </dependency>
+		<dependency>
 		    <groupId>org.flywaydb</groupId>
 		    <artifactId>flyway-core</artifactId>
 		</dependency>
