--- a/bet/pom.xml
+++ b/bet/pom.xml
@@ -68,7 +68,7 @@
 		    <groupId>org.flywaydb</groupId>
 		    <artifactId>flyway-core</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-core</artifactId>
 		</dependency>
@@ -79,7 +79,7 @@
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-web</artifactId>
-   		</dependency>
+   		</dependency>-->
 	</dependencies>
 
 	<build>
