--- a/bet/src/main/resources/application.properties
+++ b/bet/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
+# Server
+server.servlet.context-path=/api
